# renderbud

./: .gitignore  Cargo.toml  README.md  shell.nix
examples/: ironwood.rs
examples/assets/: ironwood.glb
src/: camera.rs  egui.rs  grid.wgsl  ibl.rs  lib.rs  main.rs  material.rs  model.rs  shader.wgsl  skybox.wgsl  texture.rs  world.rs
