[package]
name = "renderbud"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
winit = { workspace = true }
wgpu = { workspace = true }
egui-wgpu = { workspace = true, optional = true }
egui = { workspace = true, optional = true }

glam = { version = "0.30.10", features = ["bytemuck"] }
bytemuck = { version = "1.14", features = ["derive"] }
gltf = "1.4"

[features]
egui = ["egui-wgpu", "dep:egui"]

[dev-dependencies]
pollster = "0.4.0"
