[package]
name = "renderbud"
version = "0.1.0"
edition = "2024"

[dependencies]
#winit = { workspace = true }
#wgpu = { workspace = true }
#image = { workspace = true }
#bytemuck = { workspace = true }

image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
winit = "0.30"
wgpu = "24"
bytemuck = { version = "1.14", features = ["derive"] }
egui-wgpu = { version = "0.33", optional = true }
egui = { version = "0.33", optional = true }

glam = { version = "0.30.10", features = ["bytemuck"] }
gltf = "1.4"
half = "2.7.1"

[features]
egui = ["egui-wgpu", "dep:egui"]

[dev-dependencies]
pollster = "0.4.0"
